--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-# registry=https://registry.npmjs.org/
-registry=https://registry.nlark.com/
+registry=https://registry.npmjs.org/
+auto-install-peers=true
