--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
-  }
+    "source.fixAll.eslint": true
+  },
+
+  "eslint.alwaysShowStatus": true,
+  "eslint.validate": ["javascript", "typescript"]
 }
