--- a/package.json
+++ b/package.json
@@ -6,9 +6,22 @@
   "_moduleAliases": {
     "@": "./dist"
   },
+  "engines": {
+    "node": ">=14",
+    "pnpm": ">=6"
+  },
+  "lint-staged": {
+    "*.{js,ts},!public/**/*.js": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{md,json}": "prettier --write"
+  },
   "scripts": {
+    "prepare": "husky install .husky",
     "preinstall": "npx only-allow pnpm",
-    "dev": "cross-env NODE_ENV=development nodemon"
+    "dev": "cross-env NODE_ENV=development nodemon",
+    "type-check": "tsc"
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
@@ -30,14 +43,27 @@
     "typeorm": "^0.2.37"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@types/formidable": "^2.0.5",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/koa": "^2.13.4",
+    "@types/koa-compose": "^3.2.5",
     "@types/koa-send": "^4.1.3",
     "@types/koa__cors": "^3.0.3",
     "@types/koa__router": "^8.0.8",
     "@types/node": "^16.9.4",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
     "cross-env": "^7.0.3",
+    "eslint": "^8.23.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "nodemon": "^2.0.12",
+    "prettier": "^2.7.1",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.5.4"
   }
 }
